# blundr

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Project_Plan.md  README.md
data/utils/: fer-batch-upload.sh
k8s/: README.md  admin-api.yaml  aggregator.yaml  build-push.sh  chatroom.yaml  face-emotion.yaml  fer-training-job.yaml  ingress.yaml  voice-emotion.yaml
src/admin-api/: .dockerignore  Dockerfile  README.md  consts.py  docker-compose.yml  job_builder.py  main.py  pyproject.toml
src/aggregator-service/: Dockerfile  Dockerfile.local-ollama  Main.py  README.md  aggregator.py  dockerfile
src/chatroom/: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  example.env  package-lock.json  package.json  tsconfig.json
src/cli/: .gitignore  README.md  build.sh  example.env  go.mod  go.sum  main.go
src/face-emotion-service/: .gitignore  Dockerfile  Dockerfile.train  README.md  docker-compose.yml  (+4 more)
src/voice-emotion-service/infer/: README.md  consts.py  main.py  pyproject.toml
src/voice-emotion-service/infer/data/: audio.py  load.py  prediction.py  segment.py
src/voice-emotion-service/infer/model/: model.py  speech_recognition.py
src/voice-emotion-service/train/: .gitignore  README.md  main.py  pyproject.toml
src/voice-emotion-service/train/config/: dataset_config.py  model_config.py
src/voice-emotion-service/train/dataset/: augment.py  config.py  dataloaders.py  dataset.py  download.py  merge-and-dump.py  merge.py  spec_dataset.py  transformations.py
src/voice-emotion-service/train/model/: crnn_model.py  dataloaders.py
(+110 files in other folders)
