[project]
name = "infer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ve-common",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "soundfile>=0.13.1",
    "librosa>=0.11.0",
]

[tool.uv.sources]
ve-common = { path="../common", editable=true }
